--- a/app/views/layouts/application/_header.haml
+++ b/app/views/layouts/application/_header.haml
@@ -3,7 +3,7 @@
     - logo = image_tag '/images/transparent.gif', :id => 'main_logo', :class => 'app_sprite', :alt => 'eHouseOffers.com: Professional Home Buyers'
     = link_to_unless current_page?(root_url), logo, root_url
 
-  %div.yui3-u-5-24.right
+  %div#headerR.yui3-u-5-24.right
     %div#request_offerC.yui3-g
       %div.yui3-u-2-3
         %p
