--- a/app/views/reasons_to_sell/show.html.haml
+++ b/app/views/reasons_to_sell/show.html.haml
@@ -1,7 +1,9 @@
 :ruby
+  header(:title, @reason.title)
+  header(:description, @reason.teaser)
+
   extra_js('reasons_to_sell')
   extra_css('reasons_to_sell')
-
 
 %hr#reason_page.space
 
