--- a/app/views/spotlight/index.html.haml
+++ b/app/views/spotlight/index.html.haml
@@ -1,4 +1,7 @@
 :ruby
+  header(:title, 'Real Estate Spotlight')
+  # header(:description, 'Get description from Sam')
+
   extra_css('spotlight')
   
 = render "shared/breadcrumb", :crumbs => [[:home, root_path], [:spotlight, nil]]
