--- a/app/views/trends/index.html.haml
+++ b/app/views/trends/index.html.haml
@@ -1,4 +1,7 @@
 :ruby
+  header(:title, 'Real Estate Trends')
+  # header(:description, 'Get description from Sam')
+
   extra_css('trends')
 
 = render "shared/breadcrumb", :crumbs => [[:home, root_path], [:trends, nil]]
