--- a/app/views/guides/show.html.haml
+++ b/app/views/guides/show.html.haml
@@ -1,17 +1,42 @@
 :ruby
-  extra_css('guides_shared')
+  header(:title, @guide.title)
+  header(:description, @guide.teaser)
+
+  extra_css('guides')
 
 = admin_area do
-  = link_to "Edit This Article", edit_guide_path(@guide)
+  = link_to "Edit This Article", edit_guide_path(@guide.title_for_url)
   \|
   = link_to "Create New Guide", new_guide_path()
 
-
 = render "shared/breadcrumb", :crumbs => [[:home, root_path], [:guides, guides_path], ["#{@guide.title}", nil]]
 
-%div.xs_two_col.yui3-g
-  %div#left_col.yui3-u-33-48
-    = render :partial => "guide", :object => @guide
+%div#guide_showC.xs_two_col.yui3-g
+  %div.guide_contentC.yui3-u-33-48
+    = link_to image_tag(@guide.photo.url(:large), :alt => @guide.title, :id => 'main_image'), object_path(@guide)
+
+    %h1
+      = raw @guide.title
+
+    %div.article_body
+      = raw @guide.content
+
+    %hr.space
+    %hr
+    %hr.space
+
+    %div#other_guidesC
+      %div.titleC
+        %div#books &nbsp;
+        %h3 Other Guides For Home Sellers
+      
+      %div.box
+        %div.gutter.clearfix
+          %ul
+            - @other_guides.each do |g|
+              %li
+                = link_to g.title, object_path(g)
+      
 
   %div#right_col.yui3-u-7-24
     = render :partial => "shared/seller_signup"
