--- a/app/views/reasons_to_sell/index.html.haml
+++ b/app/views/reasons_to_sell/index.html.haml
@@ -1,4 +1,7 @@
 :ruby
+  header(:title, 'Reasons To Sell Your House')
+  # header(:description, 'Get description from Sam')
+
   extra_js('reasons_to_sell')
   extra_css('reasons_to_sell','pagination')
 
@@ -7,21 +10,22 @@
 = admin_area do
   = link_to "Create New Reason", new_reason_path()
 
-= render "shared/breadcrumb", :crumbs => [[:home, root_path], [:reasons_to_sell, nil]]
+= render "shared/breadcrumb", :crumbs => crumbs_for_blog_object(@reasons)
 
-- if @reasons.empty?
-  %h2 We're Sorry
-  %p But there are no articles currently available. Please check back later.
+%div.xs_two_col.yui3-g
+  %div#left_col.yui3-u-33-48
+    = render "shared/slider", :id => 'reasons_slider', :collection => @slider_reasons
 
-- else
-  %div.xs_two_col.yui3-g
-    %div#left_col.yui3-u-33-48
-      = render "shared/slider", :id => 'reasons_slider', :collection => @slider_reasons
+    - if @reasons.empty?
+      %p.sorry_no_results
+        = "Sorry, but no guides were found #{params[:page].present? ? 'for this page.' : '.'}"
+    - else
       %hr.space
       = render :partial => "reason", :collection => @reasons, :locals => {:full_article => false}, :spacer_template => 'shared/spacers/guides_index'
-      %hr.space
-      = will_paginate @reasons
 
-    %div#right_col.yui3-u-7-24
-      = render :partial => "shared/seller_signup"
+    %hr.space
+    = will_paginate @reasons
+
+  %div#right_col.yui3-u-7-24
+    = render :partial => "shared/seller_signup"
 
