--- a/app/views/seller_listings/thank_you.haml
+++ b/app/views/seller_listings/thank_you.haml
@@ -20,7 +20,7 @@
 
 %div#discountsC.box_contentC
   %div.box
-    %div.gutter
+    %div.gutter.yui3-g
       .yui3-u-1-3
         .yui3-u-5-24
           &nbsp;
