--- a/public/stylesheets/guides.css
+++ b/public/stylesheets/guides.css
@@ -1,18 +1,115 @@
+/* Start Page Banner */
+#menuC { margin-bottom : 12px; }
+#mainC img#top {
+    background : url(/images/page_banners/guides.png) no-repeat scroll 0px 0px transparent;
+    height : 110px;
+}
+ul.breadcrumbC {
+    margin-top : -2px;
+}
+
+/* guide single view */
+.guideC {}
+.guideC .guide_imageC {}
+.guideC .guide_contentC {
+    margin-left : 3px;
+}
+.guide_contentC h1 {
+    color : #84963a;
+    font-size : 1.3em;
+    font-weight : bold;
+    margin : -2px 0 5px 0;
+}
+h1 a {
+    color : inherit;
+}
+.guide_contentC p {
+    color : #666;
+    font-size : .85em;
+    line-height : 1.4em;
+}
+.guide_contentC p.teaser {
+    min-height : 59px;
+}
+
+/*-------------------*/
 #mainC div#tab_arrow {
     display : block;
     left : 815px;
     top  : -6px;
 }
 
-/* Start Sprites */
 .read_full_article {
     background : url(/images/sprites/guides.png) no-repeat scroll 0px 0px transparent;
     height : 33px;
     width : 110px;
     margin : 10px 0 0 0;
 }
+#books {
+    float : left;
+    background : url(/images/sprites/guides.png) no-repeat scroll -112px 0px transparent;
+    height : 45px;
+    width : 39px;
+    margin : 0 10px 0 0;
+}
 
-/* the rest of it */
+
 div#left_col hr.space {
     margin : 0 0 50px 0;
 }
+
+/*---------- guide show ---------*/
+div#guide_showC .guide_contentC {
+    margin-right : 15px;
+}
+div#guide_showC img#main_image {
+    float : left;
+    padding : 0 15px 10px 0;
+}
+div.article_body {
+    padding-left : 15px;
+}
+div.article_body p {
+    padding-bottom : 1em;
+}
+
+.box div.gutter {
+    padding : 17px 0 12px 15px;
+}
+div#other_guidesC {
+    margin : 0 15px;
+}
+div#other_guidesC .titleC {
+    min-height : 45px;
+    margin-bottom : 5px;
+}
+div#other_guidesC h3 {
+    color : #F89A36;
+    font-size : 1.1em;
+    font-weight : bold;
+    letter-spacing : -0.75px;
+    line-height : 39px;
+}
+div#other_guidesC ul {
+    margin-left : 15px;
+}
+div#other_guidesC li {
+    float : left;
+    list-style : disc outside none;
+    color : #53aa47;
+    font-size : .8em;
+    width : 30%;
+    margin-right : 3%;
+    margin-bottom : 5px;
+
+}
+div#other_guidesC li a {
+    color : #7A7A7A;
+}
+
+
+
+
+
+
+
