--- a/app/views/reasons_to_sell/_email_image.haml
+++ b/app/views/reasons_to_sell/_email_image.haml
@@ -6,12 +6,12 @@
       .field
         = label_tag 'your_email', 'Your Email'
         -# Do not auto-populate. it could be confusing (email to who? Me? Why is my email address in there?)
-        -#= text_field_tag 'your_email', (user_signed_in? ? current_user.email : ''), :class => 'validate(required, email)', 'data-example' => 'Your Email'
-        = text_field_tag 'your_email', '', :class => 'validate(required, email)', 'data-example' => 'Your Email'
+        -#= text_field_tag 'your_email', (user_signed_in? ? current_user.email : ''), 'data-validation' => 'validate(required, email)', 'data-example' => 'Your Email'
+        = text_field_tag 'your_email', '', 'data-validation' => 'validate(required, email)', 'data-example' => 'Your Email'
 
       .field
         = label_tag 'friends_email', 'Friends Email'
-        = text_field_tag 'friends_email', '', :class => 'validate(required, email)', 'data-example' => 'Friends Email'
+        = text_field_tag 'friends_email', '', 'data-validation' => 'validate(required, email)', 'data-example' => 'Friends Email'
 
       .submitC
         = image_submit_tag '/images/transparent.gif', :id => 'send_image_btn', :class => 'reasons_sprite'
