--- a/app/views/seller_listings/_form.html.haml
+++ b/app/views/seller_listings/_form.html.haml
@@ -1,8 +1,5 @@
 :ruby
-  extra_js('jquery.ketchup','jquery.default_values')
-  extra_css('jquery.ketchup')
-
-  # We have a bunch of css which hinges on this, so...
+  # We have a bunch of css which hinges on this, so regardless of create or edit, make the form_id constant
   form_id = 'new_seller_listing'
   
 = form_for @seller_listing, :html => {:id => form_id} do |f|
@@ -11,30 +8,30 @@
   = f.fields_for @seller_listing.user do |field|
     .field#first_name
       = field.label :first_name, 'First Name'
-      = field.text_field :first_name, :class => 'validate(required)', 'data-example' => 'First Name'
+      = field.text_field :first_name, 'data-validation' => 'validate(required)', 'data-example' => 'First Name'
 
     .field#last_name
       = field.label :last_name, 'Last Name'
-      = field.text_field :last_name, :class => 'validate(required)', 'data-example' => 'Last Name'
+      = field.text_field :last_name, 'data-validation' => 'validate(required)', 'data-example' => 'Last Name'
 
     .field#email
       = field.label :email
-      = field.text_field :email, :class => 'validate(required, email)', 'data-example' => 'Email'
+      = field.text_field :email, 'data-validation' => 'validate(required, email)', 'data-example' => 'Email'
 
   = f.fields_for @seller_listing.user.phone_for_form do |field|
     .field#number
       = field.label :number, 'Phone'
-      = field.text_field :number, :class => 'validate(required)', 'data-example' => 'Phone Number'
+      = field.text_field :number, 'data-validation' => 'validate(required)', 'data-example' => 'Phone Number'
 
   = f.fields_for @seller_listing.user.addresses.new do |field|
     .field#address1
       = field.label :address1, 'Address'
-      = field.text_field :address1, :class => 'validate(required)', 'data-example' => 'Address'
+      = field.text_field :address1, 'data-validation' => 'validate(required)', 'data-example' => 'Address'
 
   = f.fields_for @seller_listing.user.addresses.new do |field|
     .field#address_zip
       = field.label :zip, 'Zip Code'
-      = field.text_field :zip, :class => 'validate(required, minlength(5))', 'data-example' => 'Zip Code'
+      = field.text_field :zip, 'data-validation' => 'validate(required, minlength(5))', 'data-example' => 'Zip Code'
 
   .submitC
     = image_submit_tag '/images/transparent.gif', :id => 'get_cash_offer_btn', :class => 'sprite'
@@ -46,7 +43,4 @@
       = image_tag '/images/transparent.gif', :id => 'truste', :class => 'sprite', :alt => 'Truste Certified Privacy'
       = image_tag '/images/transparent.gif', :id => 'verisign', :class => 'sprite last', :alt => 'Verisign'
 
-:javascript
-  $(document).ready(function() {
-    $('form##{form_id}').ketchup().default_form_values();
-  });
+
