--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -9,6 +9,7 @@ h1,h2 {
 h2 { font-size : 1.2em; margin-bottom : 15px; }
 .field {
     margin-bottom : 20px;
+    width : 700px;
 }
 .field label {
     display : block;
