updated new seller signup with image and new text

--- a/app/views/shared/_seller_signup.haml
+++ b/app/views/shared/_seller_signup.haml
@@ -3,12 +3,10 @@
 
 %div.seller_signup_boxC.box
   %div.gutter
-    %h2
-      Get an Offer Today!
+    = image_tag '/images/get_a_cash_offer_on_your_house_today.png', :alt => 'Get a cash offer on your house today!'
 
     %p
-      We're so sure that we will connect you with the right people that we will get your house sold that we will eat a
-      squirrel if you don't sell within the first month!
+      Connect with a home buyer in 3 easy steps!
 
     %strong
       Sell Your House Today!
