--- a/app/views/seller_listings/comp_data.haml
+++ b/app/views/seller_listings/comp_data.haml
@@ -9,3 +9,7 @@
       %div#form_gutter
         = render :partial => 'seller_listings/comp_data'
 
+  %hr.space
+  %div.box
+    %div.gutter.yui3-g
+      = render 'shared/quotes_row'
