--- a/app/views/seller_listings/_comp_data.haml
+++ b/app/views/seller_listings/_comp_data.haml
@@ -3,21 +3,6 @@
 
   .field
     .yui3-u-5-24.left_col
-      = f.label :currently_listed, 'Is Property Listed?'
-      %div.note w/a realtor
-
-    .yui3-u-3-4.right_col.radioC
-      %span
-        no
-        %br
-        = f.radio_button :currently_listed, false
-      %span
-        yes
-        %br
-        = f.radio_button :currently_listed, true
-
-  .field
-    .yui3-u-5-24.left_col
       = f.label :estimated_value, 'Estimated Home Value'
     .yui3-u-3-4.right_col.radioC
       = f.text_field :estimated_value
@@ -38,6 +23,29 @@
 
   .field
     .yui3-u-5-24.left_col
+      = f.label :time_frame, 'Sell Time'
+      %div.note When would you like to sell?
+    .yui3-u-3-4.right_col.radioC
+      - [1,3,6].each do |i|
+        %span
+          = "< #{i} mo"
+          %br
+          = f.radio_button :time_frame, i
+
+      %span
+        Longer
+        %br
+        = f.radio_button :time_frame, 36
+
+  .field
+    .yui3-u-5-24.left_col
+      = f.label :selling_reason, 'Reason for Selling'
+    .yui3-u-3-4.right_col.radioC
+      = f.text_area :selling_reason
+
+
+  -#.field
+    .yui3-u-5-24.left_col
       = f.label :payments_are_current, 'Are You Behind?'
       %div.note on your mortgage payments
     .yui3-u-3-4.right_col.radioC
@@ -57,3 +65,12 @@
 
   .submitC
     = image_submit_tag '/images/transparent.gif', :id => 'make_offer', :class => 'sprite'
+
+    #securityC
+      = image_tag '/images/transparent.gif', :id => 'lock_icon', :class => 'sprite', :alt => 'Secure!'
+    #security_iconsC
+      = image_tag '/images/transparent.gif', :id => 'mcafee', :class => 'sprite', :alt => 'McAfee'
+      = image_tag '/images/transparent.gif', :id => 'truste', :class => 'sprite', :alt => 'Truste Certified Privacy'
+      = image_tag '/images/transparent.gif', :id => 'verisign', :class => 'sprite last', :alt => 'Verisign'
+
+
