--- a/app/views/seller_listings/thank_you.haml
+++ b/app/views/seller_listings/thank_you.haml
@@ -15,12 +15,13 @@
           %li Commitment Free
           %li Helpful Customer Service
 
-%div#thanksC.box_contentC
+-#%div#thanksC.box_contentC
   %div#thanks_tmp.sprite &nbsp;
 
 %div#discountsC.box_contentC
   %div.box
     %div.gutter.yui3-g
+      %h1 30-Day Limited Time Savings
       .yui3-u-1-3
         .yui3-u-5-24
           &nbsp;
@@ -51,8 +52,13 @@
           %p
             Talk to a professional debt consolidation expert consolidate your debt.
 
-
+      %hr.space
       %div#buttonC
         = image_tag '/images/transparent.gif', :id => 'send_me_discounts', :class => 'discount', :alt => 'Send Me Discounts!'
+        = link_to 'no thanks', root_path
       
 
+  %hr.space
+  %div.box
+    %div.gutter.yui3-g
+      = render 'shared/quotes_row'
