add example text to sellign reason field

--- a/app/views/seller_listings/_comp_data.haml
+++ b/app/views/seller_listings/_comp_data.haml
@@ -41,7 +41,7 @@
     .yui3-u-5-24.left_col
       = f.label :selling_reason, 'Reason for Selling'
     .yui3-u-3-4.right_col.radioC
-      = f.text_area :selling_reason
+      = f.text_area :selling_reason, 'data-example' => 'I am selling because...'
 
 
   -#.field
