--- a/app/views/seller_listings/thank_you.haml
+++ b/app/views/seller_listings/thank_you.haml
@@ -21,7 +21,7 @@
 %div#discountsC.box_contentC
   %div.box
     %div.gutter.yui3-g
-      %h1 30-Day Limited Time Savings
+      %h1.orange 30-Day Limited Time Savings
       .yui3-u-1-3
         .yui3-u-5-24
           &nbsp;
