--- a/public/stylesheets/reason_show.css
+++ b/public/stylesheets/reason_show.css
@@ -1,7 +1,7 @@
-
+/*
 div.reasonC {}
 .reason_imageC h1 {
-    color : #84963a;
+    color : #75973e;
     font-size : 1.3em;
     font-weight : bold;
     margin : -2px 0 5px 0;
@@ -11,3 +11,4 @@ div.reasonC {}
     font-size : .85em;
     line-height : 1.4em;
 }
+*/
