--- a/public/stylesheets/seller_signup.css
+++ b/public/stylesheets/seller_signup.css
@@ -5,7 +5,7 @@
     height : 25px;
     width  : 85px;
     vertical-align : text-top;
-    margin-left : 7px;
+    margin-left : 5px;
 }
 #truste {
     background-position : 0px -125px;
@@ -33,19 +33,20 @@ form input[type="image"] {
 /* end sprites */
 
 .seller_signup_boxC {
-    width : 260px;
+    /*width : 260px; rm'd so right col widgets have a consistent width */
     margin-bottom : 50px; /* to account for how we placed the #security_iconsC (see below) */
 }
 .seller_signup_boxC div.gutter {
     padding : 15px 22px 5px;    
 }
-.seller_signup_boxC h2 {
+/*.seller_signup_boxC h2 {
     letter-spacing : -.75px;
     color : #f89a36;
     font-size : 1.4em;
     font-weight : bold;
     margin-bottom : 5px;
 }
+*/
 .seller_signup_boxC p,
 .seller_signup_boxC strong {
     font-size : .8em;
