--- a/app/views/guides/_guide.haml
+++ b/app/views/guides/_guide.haml
@@ -1,15 +1,15 @@
-
+  
 %div.guideC.yui3-g
   %div.guide_imageC.yui3-u-11-48
-    = link_to image_tag(guide.photo.url(:small), :alt => guide.title), object_path(guide)
+    = link_to image_tag(guide.photo.url(:small), :alt => guide.title), construct_blog_path(guide, :show)
 
   %div.guide_contentC.yui3-u-3-4  
     %h1.green
-      = link_to raw(guide.title), object_path(guide)
+      = link_to raw(guide.title), construct_blog_path(guide, :show)
 
     %p.grey85.teaser
       = guide.teaser
 
-    = link_to image_tag('/images/transparent.gif', :class => 'read_full_article', :alt => 'Read Full Article'), guide_path(guide.title_for_url)
+    = link_to image_tag('/images/transparent.gif', :class => 'read_full_article', :alt => 'Read Full Article'), construct_blog_path(guide, :show)
     
 
