--- a/public/stylesheets/jquery.slider.css
+++ b/public/stylesheets/jquery.slider.css
@@ -1,95 +1,3 @@
-.slider {
-    width : 630px;
-    position: relative;
-    border : 1px solid #e8edca;
-    border-radius : 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-}
-.slider_bg {
-    background : url(/images/sprites/slider.png) repeat-x scroll 0px 0px transparent;
-    width : 621px;
-    height : 55px;
-    position : absolute;
-    top : 130px;
-    left : 5px;
-}
-.scroll {
-	overflow: hidden;
-    width : 600px;
-    height : 185px;
-    margin: 0 auto;
-    position: relative;
-}
-.scrollContainer {
-	position: relative;
-}
-.scrollContainer div.panel {
-    padding: 16px 9px 0px 10px;
-    width : 169px;
-    height : 200px;
-}
-.inside {
-    position : absolute;
-    bottom : 0;
-}
-.inside img {
-	display: block;
-    width : 169px;
-}
-.slider h2 {
-    font-size : 1em;
-    color : #888;
-    padding : 14px 0 10px 0;
-    text-align : center;
-    letter-spacing : .2px;
-    word-spacing : .2px;
-}
-.slider h2 a {
-	font-weight: bold;
-	color: #888;
-}
-.inside p {
-	font-size: 11px;
-	color: #ccc;
-}
-.scroll_actionsC {
-    height : 20px;
-    width : 600px;
-    margin : 0 auto;
-    margin-bottom : 15px;
-    position : relative;
-    overflow : hidden;
-}
-.scroll_actionsC .scroll_left {
-    background : url(/images/sprites/slider.png) no-repeat scroll 0px -56px transparent;
-    height : 20px;
-    width : 28px;
-    position : absolute;
-    top : 0;
-    left : 0;
-}
-.scroll_actionsC .scrollbarC {
-    background : url(/images/sprites/slider.png) no-repeat scroll -34px -56px transparent;
-    width : 553px;
-    height : 20px;
-    position : absolute;
-    top : 0;
-    left : 28px;
-}
-.scrollbarC .scrollbar {
-    width : 150px;
-    height : 8px;
-    background : #d5e6a9;
-    position : absolute;
-    top : 6px;
-    left : 6px;
-}
-.scroll_actionsC .scroll_right {
-    background : url(/images/sprites/slider.png) no-repeat scroll -590px -56px transparent;
-    height : 20px;
-    width : 29px;
-    position : absolute;
-    top : 0;
-    right : 0;
-}
+/*
+used as sass partial. this is not needed anymore
+.slider{width:630px;position:relative;border:1px solid #e8edca;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px}.slider_bg{background:url(/images/sprites/slider.png) repeat-x scroll 0px 0px transparent;width:621px;height:55px;position:absolute;top:130px;left:5px}.scroll{overflow:hidden;width:600px;height:185px;margin:0 auto;position:relative}.scrollContainer{position:relative}.scrollContainer div.panel{padding:16px 9px 0px 10px;width:169px;height:200px}.inside{position:absolute;bottom:0}.inside img{display:block;width:169px}.slider h2{font-size:1em;color:#888;padding:14px 0 10px 0;text-align:center;letter-spacing:.2px;word-spacing:.2px}.slider h2 a{font-weight:bold;color:#888}.inside p{font-size:11px;color:#ccc}.scroll_actionsC{height:20px;width:600px;margin:0 auto;margin-bottom:15px;position:relative;overflow:hidden}.scroll_actionsC .scroll_left{background:url(/images/sprites/slider.png) no-repeat scroll 0px -56px transparent;height:20px;width:28px;position:absolute;top:0;left:0}.scroll_actionsC .scrollbarC{background:url(/images/sprites/slider.png) no-repeat scroll -34px -56px transparent;width:553px;height:20px;position:absolute;top:0;left:28px}.scrollbarC .scrollbar{width:150px;height:8px;background:#d5e6a9;position:absolute;top:6px;left:6px}.scroll_actionsC .scroll_right{background:url(/images/sprites/slider.png) no-repeat scroll -590px -56px transparent;height:20px;width:29px;position:absolute;top:0;right:0}*/
