1) Fixed issue with will_paginate not limiting the number of blog entries per page by removing the model @@per_page and just passing in the :per_page in the controller 2) Fixed bug where will_paginate was creating the wrong links for the pagination links/buttons; it was not taking into account the blog context

--- a/app/views/blogs/index.haml
+++ b/app/views/blogs/index.haml
@@ -23,7 +23,7 @@
       = render :partial => "shared/blogs/image_driven", :collection => @blogs, :as => :blog, :locals => {:full_article => false}, :spacer_template => 'shared/blogs/spacer'
 
     %hr.space
-    = will_paginate @blogs
+    = will_paginate @blogs, :renderer => BlogPaginationListLinkRenderer
 
   %div#right_col.yui3-u-7-24
     = render :partial => "shared/seller_signup"
